[package]
edition = "2021"
name = "lilygo-t4-s3"
rust-version = "1.86"
version = "0.1.0"

[[bin]]
name = "lilygo-t4-s3"
path = "./src/bin/main.rs"

[dependencies]
esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32s3"] }
esp-hal = { version = "=1.0.0-rc.0", features = [
  "esp32s3",
  "unstable",
  "psram",
] }

embassy-net = { version = "0.7.0", features = [
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
] }
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
esp-alloc = "0.8.0"
esp-backtrace = { version = "0.17.0", features = [
  "esp32s3",
  "exception-handler",
  "panic-handler",
], default-features = false }
esp-println = { version = "0.15.0", features = [
  "esp32s3",
  "auto",
], default-features = false }
critical-section = "1.2.0"
embassy-executor = { version = "0.7.0", features = ["task-arena-size-32768"] }
embassy-time = "0.4.0"
esp-hal-embassy = { version = "0.9.0", features = ["esp32s3"] }
esp-wifi = { version = "0.15.0", features = [
  "builtin-scheduler",
  "esp-alloc",
  "esp32s3",
  "smoltcp",
  "wifi",
] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
static_cell = { version = "2.1.0", features = ["nightly"] }
esp-csi-rs = { path = "../../esp-csi-rs", features = ["esp32s3", "auto"] }
embassy-sync = "0.7.0"
heapless = "0.8.0"
micromath = { version = "2.1.0" }
rm690b0-rs = { version = "0.1.1", features = ["lilygo_t4_s3"] }
embedded-graphics = "0.8.0"
embedded-hal-bus = "0.3.0"
cst226-rs = "0.1.1"
embedded-hal = "1.0.0"
profont = "0.7.0"
embedded-graphics-transform = "0.1.0"


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
